# clevis-pin-trustee

./: .gitignore  Cargo.toml  Containerfile  README.md  REUSE.toml  clevis-decrypt-trustee  clevis-encrypt-trustee  data.json  test-secret-trustee  test.sh
.github/: dependabot.yml
.github/workflows/: container.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  tpm_utiles.rs
src/: main.rs
