# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "clevis-pin-trustee"
version = "0.1.0"
edition = "2024"
description = "Clevis PIN for URL-based encryption/decryption"
repository = "https://github.com/confidential-clusters/clevis-pin-trustee"
rust-version = "1.85.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
josekit = "0.10.3"
base64 = "0.22.1"
rand = "0.9.2"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.0"
