# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "clevis-pin-trustee-lib"
version = "0.1.0"
description = "Library for Clevis PIN for URL-based encryption/decryption"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.28"
serde.workspace = true
tss-esapi = "7.6.0"

